TODO edited online with Bitbucket

--- a/TODO
+++ b/TODO
@@ -3,3 +3,5 @@ Consider getting rid of QHULL to generate the radial grid. It seems unnecessary 
 Need to strip out remaining, unnecessary LIME parameters and source code files. Probably a good idea to remove all references to LIME, since so much of the code has now changed.
 
 Move some key parameters from the code to the lime.h file, such as the CVODE tolerances, optical depth cutoffs for EP method, number of supersamples during raytracting, etc.
+
+Make the input file more user-friendly, and rewrite the code so that it does not have to be compiled every time at runtime.
