--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
-Consider getting rid of QHULL to generate the radial grid. It seems unnecessary and results in different radial grids from one run to the next, which could be problematic in terms of repeatability.
+Consider getting rid of QHULL to generate the radial grid. It seems unnecessary and results in different radial grids from one run to the next, which could be problematic in terms of repeatability. Furthermore, the grid has lots of duplicate radii, which impacts the efficiency of the code. This needs to be fixed, at least by throwing out the duplicates.
+
+Presently, the relationship between time and radius is hard-coded in solver.c assuming a constant expansion velocity. Obviously, the code breaks if the expansion velocity changes with radius, so this needs to be reworked by including a differential equation for radius as a function of time.
 
 Need to strip out remaining, unnecessary LIME parameters and source code files. Probably a good idea to remove all references to LIME, since so much of the code has now changed.
 
