--- a/TODO
+++ b/TODO
@@ -1,12 +1,8 @@
-Consider getting rid of QHULL to generate the radial grid. It seems unnecessary and results in different radial grids from one run to the next, which could be problematic in terms of repeatability. Furthermore, the grid has lots of duplicate radii, which impacts the efficiency of the code. This needs to be fixed, at least by throwing out the duplicate radii.
-
-Presently, the relationship between time and radius is hard-coded in solver.c assuming a constant expansion velocity. Obviously, the code breaks if the expansion velocity changes with radius, so this needs to be reworked by including a differential equation for radius as a function of time.
-
 Would be good to check correctness of the Pdot(t) terms, as they seem to behave strangely at small times (there's a large oscillation about 0), even though this does not seem to detrimentally impact the level populations.
 
 Need to strip out remaining, unnecessary LIME parameters and source code files. Probably a good idea to remove all references to LIME, since so much of the code has now changed.
 
-Move some key parameters from the code to the lime.h file, such as the CVODE tolerances, optical depth cutoffs for EP method, number of supersamples during raytracting, etc.
+Move some key parameters from the code to the lime.h file, such as the optical depth cutoffs for EP method, number of supersamples during raytracting, etc.
 
 Make the input file more user-friendly, and rewrite the code so that it does not have to be compiled every time at runtime.
 
